Feat: 예약 가능 시간 조회 api에 과거 시간 제외 로직 추가